# b2h5py

./: LICENSE  README.rst  RELEASE-NOTES.md  pyproject.toml
.github/workflows/: ci.yml
b2h5py/: __init__.py  auto.py  blosc2.py  patch.py
b2h5py/tests/: common.py  test_b2dataset.py  test_dataset_patching.py  test_patched_h5py.py  test_slicing_blosc2.py
examples/: blosc2_1dim_slicing.py  blosc2_optimized_slicing.py
